--- a/config.org
+++ b/config.org
@@ -1888,3 +1888,8 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
           (default-directory dir))
       (shell-command command)))
 #+END_SRC
+* grep
+use ripgrep with standard emacs compilation buffer
+#+BEGIN_SRC elisp
+  (grep-apply-setting 'grep-command "rg --color always -nSH --no-heading -e ")
+#+END_SRC
