--- a/config.org
+++ b/config.org
@@ -1893,5 +1893,6 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
 use ripgrep with standard emacs compilation buffer
 #+BEGIN_SRC elisp
   (require 'grep)
-  (grep-apply-setting 'grep-command '("rg --color always -nSH --no-heading -e   ./" . 40))
+  (grep-apply-setting 'grep-command
+                      '("rg --color always -nSH --no-heading -e   ./" . 40))
 #+END_SRC
