Update fd commands

--- a/config.org
+++ b/config.org
@@ -1867,6 +1867,10 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
 [[https://github.com/sharkdp/fd][fd]] is a fast finder.  [[https://www.masteringemacs.org/article/working-multiple-files-dired][Mickey]] provides an excellent overview of the [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Dired-and-Find.html][find-dired]] package.
 
 #+BEGIN_SRC emacs-lisp
+  (defalias 'fd 'find-lisp-find-dired)
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
   (require 'find-dired)
   (defun js/fd-dired (dir pattern)
     "Run `fd' with glob PATTERN in DIR and output in Dired buffer \"*Find*\".
@@ -1874,8 +1878,8 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
   Uses `find-dired-with-command'."
     (interactive
      (list (read-directory-name "Run find in directory: " nil "" t)
-           (read-string "Filename (wildcard):  ")))
-    (let ((command (concat "fd -g '" pattern "' -X ls " (cdr find-ls-option))))
+           (read-string "Filename (regex):  ")))
+    (let ((command (concat "fd '" pattern "' -X ls " (cdr find-ls-option))))
       (find-dired-with-command dir command)))
 #+END_SRC
 
@@ -1884,8 +1888,8 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
     "Run `fd' with glob PATTERN in DIR and output using `tree'."
     (interactive
      (list (read-directory-name "Run find in directory: " nil "" t)
-           (read-string "Filename (wildcard):  ")))
-    (let ((command (concat "fd -g '" pattern  "' | tree --fromfile"))
+           (read-string "Filename (regex):  ")))
+    (let ((command (concat "fd '" pattern  "' | tree --fromfile"))
           (default-directory dir))
       (shell-command command)))
 #+END_SRC
