--- a/linux_start.org
+++ b/linux_start.org
@@ -6,6 +6,7 @@ ln -s ~/.dotfiles/snippets ~/.emacs.d/snippets
 ln -s ~/.dotfiles/qute/config/config.py ~/.config/qutebrowser/config.py
 ln -s ~/.dotfiles/qute/config/base16-gruvbox-dark-hard.config.py ~/.config/qutebrowser/base16-gruvbox-dark-hard.config.py
 ln -s ~/.dotfiles/qtile/config.py ~/.config/qtile/config.py
+ln -s ~/.dotfiles/alacritty/alacritty.toml ~/.config/alacritty/alacritty.toml
 ln -s ~/.dotfiles/unison.prf ~/.unison/default.prf
 #+END_SRC
 
