--- a/linux_start.org
+++ b/linux_start.org
@@ -9,6 +9,7 @@ ln -s ~/.dotfiles/qtile/config.py ~/.config/qtile/config.py
 ln -s ~/.dotfiles/alacritty/alacritty.toml ~/.config/alacritty/alacritty.toml
 ln -s ~/.dotfiles/unison.prf ~/.unison/default.prf
 ln -s ~/.dotfiles/unison-full.prf ~/.unison/full.prf
+ln -s ~/.dotfiles/.xprofile ~/.xprofile # if using lightdm
 #+END_SRC
 
 Untangle git config
