--- a/config.org
+++ b/config.org
@@ -1378,6 +1378,15 @@ Run ispell last
           browse-url-generic-program "qutebrowser"))
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (cond ((string= (system-name) "six")
+         (js/go-six))
+        ((string= (system-name) "DESKTOP-KK4MEEB")
+         (js/go-to-work))
+        ((string= (system-name) "LAMBDA")
+         (js/toggle-coding)))
+#+END_SRC
+
 * permanently delete from dired
 
 #+BEGIN_SRC emacs-lisp
